[BUGFIX] Fix IE 10 alignement issues with the default stylesheet
Resolves: #42707


git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/df_contentslide/trunk@67637 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/resources/css/df_contentslide.css
+++ b/resources/css/df_contentslide.css
@@ -7,10 +7,11 @@
 .dfcontentslide-toggle h3,
 .dfcontentslide-toggle h4,
 .dfcontentslide-toggle p {
-	margin: 2px 0;
-	padding: 0 2px 0 17px;
-	font-size: 1em;
-	background: url(../images/icon.png) 3px top no-repeat;
+	margin: 0 0 0 2px;
+	padding: 0 0 0 14px;
+	font-size: 11px;
+	line-height: 14px;
+	background: url(../images/icon.png) left top no-repeat;
 	cursor: pointer;
 }
 
@@ -24,7 +25,7 @@
 .dfcontentslide-active h3,
 .dfcontentslide-active h4,
 .dfcontentslide-active p {
-	background-position: 3px -45px;
+	background-position: left -45px;
 }
 
 .dfcontentslide-spinner,
